# Async_API_sprint_2

./: .env.example  .env.test  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml
fastapi_movies/: Dockerfile  pyproject.toml  requirements.txt
fastapi_movies/src/: main.py
fastapi_movies/src/api/v1/: films.py  genres.py  persons.py
fastapi_movies/src/core/: config.py  constants.py  logger.py  messages.py  pagination.py  security.py
fastapi_movies/src/db/: cache.py  elastic.py  redis.py  search.py
fastapi_movies/src/middleware/: permission_midlleware.py
fastapi_movies/src/models/: custom_models.py  film.py  genre.py  person.py
fastapi_movies/src/services/: film.py  genre.py  person.py
fastapi_movies/src/utils/: session.py  user_permission.py
nginx/configs/: site.conf
postgres_to_es/etl/: app.py  config.py  flows.py
postgres_to_es/etl/database/: backoff_connection.py
postgres_to_es/etl/lib/: es_index_schema.py  schemas.py  sql_templates.py  storage.py
postgres_to_es/etl/processors/: enricher.py  (+3 more)
tests/functional/: .dockerignore  Dockerfile  conftest.py  pyproject.toml  requirements.txt  settings.py  wait_for_es.py  wait_for_redis.py
tests/functional/fixtures/db/: cache.py  es.py
tests/functional/fixtures/endpoints/: films.py  genres.py  persons.py
tests/functional/src/: test_films.py  test_genres.py  test_persons.py
tests/functional/testdata/: es_genres.py  es_movies.py  es_persons.py  es_schema.py  schemas.py
tests/functional/utils/: backoff.py  converters.py  mock_auth_server.py
