[tool.poetry]
name = "fastapi_movies"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "1.3.1"
elasticsearch = {version = "7.9.1", extras = ["async"]}
fastapi = "0.61.1"
orjson = "3.4.1"
pydantic = "1.9.0"
uvicorn = "0.12.2"
uvloop = "0.14.0"
gunicorn = "^20.1.0"
httptools = "^0.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"
wemake-python-styleguide = "^0.16.1"
flake8-bandit = "^3.0.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
